--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,7 @@
 main:
   - title: "Category"
     url: /categories/
+    toc: true
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
