--- a/_config.yml
+++ b/_config.yml
@@ -268,7 +268,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: false
       share: true
       related: true
