--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Den"
   avatar           : "/assets/images/profile-image.jpeg"
-  bio              : "FE"
+  bio              : "매일 성장하는 개발자가 되기 위해 노력 중입니다."
   location         : "Seoul"
   email            :
   links:
