--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Den"
 description              : "An amazing website."
-url                      : "https://sjuhan123.github.io"
+url                      : "https://sjuhan123.github.io/TIL/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : sjuhan123/sjuhan123.github.io/TIL # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : sjuhan123/sjuhan123.github.io/TIL/ # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
