--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Den"
 description              : "An amazing website."
 url                      : "https://sjuhan123.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "sjuhan123/TIL" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "sjuhan123/blogcomments" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -43,7 +43,6 @@ comments:
   utterances:
     theme                : "github-light" # "github-light" (default), "github-dark"
     issue_term           : "pathname" # "pathname" (default)
-    label                : "comment" 
   giscus:
     repo_id              : # Shown during giscus setup at https://giscus.app
     category_name        : # Full text name of the category
