--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ name                     : "Den"
 description              : "An amazing website."
 url                      : "https://sjuhan123.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "sjuhan123/blogcomments" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "sjuhan123/TIL" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/logo.ico/masthead-icon.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -276,4 +276,5 @@ defaults:
 
 date_format: "%Y-%m-%d"
 
-
+after_footer_scripts:
+  - /assets/js/custom/dark-theme.js
